--- a/.htaccess
+++ b/.htaccess
@@ -11,7 +11,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # otherwise forward it to index.php
 RewriteRule . index.php
 
-RewriteCond %{HTTP_HOST} ^www.showcode.ru
-RewriteRule ^(.*)$ http://showcode.ru/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} ^www.showcode.azurewebsites.net
+RewriteRule ^(.*)$ http://showcode.azurewebsites.net/$1 [R=301,L]
 
-Redirect /zoo http://showcode.ru/events/view/3a5095f1
+Redirect /zoo http://showcode.azurewebsites.net/events/view/3a5095f1
