--- a/web.config
+++ b/web.config
@@ -19,7 +19,7 @@
                 </rule>
                 <rule name="Symfony Frontcontroller" stopProcessing="true">
                     <match url="^(.*)$" />
-                    <action type="Rewrite" url="index.php" />
+                    <action type="Rewrite" url="index.php/{R:1}" />
                 </rule>
             </rules>
         </rewrite>
