http://www.yiiframework.com/wiki/387/how-to-hide-index-php-on-microsoft-windows-server-with-iis7/

--- a/web.config
+++ b/web.config
@@ -1,28 +1,18 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-    <system.webServer>
-        <defaultDocument>
-            <files>
-                <clear />
-                <add value="index.php" />
-            </files>
-        </defaultDocument>
-        <rewrite>
-            <rules>
-                <rule name="Serve static files" stopProcessing="true">
-                    <match url="^.*$" />
-                    <conditions logicalGrouping="MatchAny">
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" pattern="" ignoreCase="false" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" pattern="" ignoreCase="false" />
-                    </conditions>
-                    <action type="None" />
-                </rule>
-                <rule name="Symfony Frontcontroller" stopProcessing="true">
-                    <match url="^(.*)$" />
-                    <action type="Rewrite" url="index.php/{R:1}" />
-                </rule>
-            </rules>
-        </rewrite>
-    </system.webServer>
+<system.webServer>
+<directoryBrowse enabled="false" />
+    <rewrite>
+        <rules>
+        <rule name="Hide Yii Index" stopProcessing="true">
+            <match url="." ignoreCase="false" />
+            <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true" />
+            </conditions>
+            <action type="Rewrite" url="index.php" appendQueryString="true" />
+        </rule> 
+        </rules>
+    </rewrite>
+</system.webServer> 
 </configuration>
-
